Update test logic to create only 2 new users per test run

--- a/BuggyCarsRating/app.config
+++ b/BuggyCarsRating/app.config
@@ -3,16 +3,16 @@
   <appSettings>
     <add key="Browser" value="Chrome" />
     <add key="Website" value="https://buggy.justtestit.org/" />
-    <add key="FirstName" value="Francisco" />
-    <add key="LastName" value="Ferreira" />
-    <add key="Password" value="P@ssW0rd" />
-    <add key="Userpass" value="P4$$word" />
-    <add key="Username" value="Futurama" />
-    <add key="Gender" value="Male" />
-    <add key="Age" value="30" />
-    <add key="Address" value="321 Aotearoa Ave" />
-    <add key="Phone" value="1234567890" />
-    <add key="Hobby" value="Bird-watching" />
+    <add key="LoginName" value="ElZilcho" />
+    <add key="FirstName" value="Bender B" />
+    <add key="LastName" value="Rodriguez" />
+    <add key="NewPassword" value="P@ssW0rd" />
+    <add key="OldPassword" value="P4$$word" />
+    <add key="InfoAddress" value="321 Aotearoa Ave" />
+    <add key="InfoGender" value="Robot" />
+    <add key="InfoYears" value="30" />
+    <add key="InfoPhone" value="1234567890" />
+    <add key="InfoHobby" value="Bird-watching" />
   </appSettings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
